--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-writable/logs/log-2025-10-30.log
-writable/session/ci_session7937de016345201c45a2202ef922979b
+# Log and session files
+writable/logs/*.log
+writable/session/*
+
+# Environment-specific database configuration
+app/Config/Database.php
