Añadi el archivo Database.php al .gitignore y ademas cree un archivo en /Docs para almacenar los correos y contraseñas de los usuarios para facilitar su busqueda.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ writable/session/ci_sessionec4cee529a193d1413123ce75a8bc314
 writable/session/ci_sessionff2f55c981550eacec95b42d6e45639c
 
 app/Config/Database.php
+app/Config/Database.php
