Añadi algunas cosas al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ writable/session/ci_sessionff2f55c981550eacec95b42d6e45639c
 
 app/Config/Database.php
 app/Config/Database.php
+app/Config/Database.php
+app/Config/Database.php
+.idea/health_proyect.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+app/Config/Database.php
+.idea/workspace.xml
