Añadi cambios al seeder para que sea idempotente

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ app/Config/Database.php
 .idea/vcs.xml
 app/Config/Database.php
 .idea/workspace.xml
+.env
+writable/debugbar/debugbar_1763836666.038169.json
+writable/debugbar/debugbar_1763836736.004351.json
+writable/debugbar/debugbar_1763836736.036020.json
+writable/debugbar/debugbar_1763836738.090532.json
+writable/debugbar/debugbar_1763836738.151796.json
+writable/.htaccess
