Implementacion de la historia PAC-PLAN-002

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,19 @@ writable/debugbar/debugbar_1763836736.036020.json
 writable/debugbar/debugbar_1763836738.090532.json
 writable/debugbar/debugbar_1763836738.151796.json
 writable/.htaccess
+writable/debugbar/debugbar_1764692609.767476.json
+writable/debugbar/debugbar_1764692617.122224.json
+writable/debugbar/debugbar_1764692617.193550.json
+writable/debugbar/debugbar_1764692618.636737.json
+writable/debugbar/debugbar_1764692618.707136.json
+writable/debugbar/debugbar_1764692621.627202.json
+writable/debugbar/debugbar_1764692621.686926.json
+writable/debugbar/debugbar_1764692623.300529.json
+writable/debugbar/debugbar_1764692627.532223.json
+writable/debugbar/debugbar_1764692637.287595.json
+writable/debugbar/debugbar_1764692638.730059.json
+writable/debugbar/debugbar_1764692659.319055.json
+writable/debugbar/debugbar_1764692662.304895.json
+writable/debugbar/debugbar_1764692664.037281.json
+writable/debugbar/debugbar_1764692667.449854.json
+writable/debugbar/debugbar_1764692669.146010.json
