Implementacion de la historia MED-PLAN-003

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,35 @@ writable/debugbar/debugbar_1764692662.304895.json
 writable/debugbar/debugbar_1764692664.037281.json
 writable/debugbar/debugbar_1764692667.449854.json
 writable/debugbar/debugbar_1764692669.146010.json
+writable/debugbar/debugbar_1764694151.854772.json
+writable/debugbar/debugbar_1764694153.695361.json
+writable/debugbar/debugbar_1764694158.545298.json
+writable/debugbar/debugbar_1764694164.410210.json
+writable/debugbar/debugbar_1764694165.366697.json
+writable/debugbar/debugbar_1764694172.954133.json
+writable/debugbar/debugbar_1764694179.886827.json
+writable/debugbar/debugbar_1764694197.116573.json
+writable/debugbar/debugbar_1764694200.322492.json
+writable/debugbar/debugbar_1764694206.687871.json
+writable/debugbar/debugbar_1764694217.917600.json
+writable/debugbar/debugbar_1764694224.114172.json
+writable/debugbar/debugbar_1764694227.848282.json
+writable/debugbar/debugbar_1764694236.188227.json
+writable/debugbar/debugbar_1764694238.351647.json
+writable/debugbar/debugbar_1764694246.212390.json
+writable/debugbar/debugbar_1764694303.872881.json
+writable/debugbar/debugbar_1764694359.832000.json
+writable/debugbar/debugbar_1764694362.975172.json
+writable/debugbar/debugbar_1764694455.464456.json
+writable/debugbar/debugbar_1764694459.672518.json
+writable/debugbar/debugbar_1764694471.734655.json
+writable/debugbar/debugbar_1764694480.109377.json
+writable/debugbar/debugbar_1764694483.220369.json
+writable/debugbar/debugbar_1764694487.351077.json
+writable/debugbar/debugbar_1764694490.466087.json
+writable/debugbar/debugbar_1764694493.655537.json
+writable/debugbar/debugbar_1764694498.596226.json
+writable/debugbar/debugbar_1764694501.344543.json
+writable/debugbar/debugbar_1764694505.523412.json
+writable/debugbar/debugbar_1764694511.094317.json
+writable/debugbar/debugbar_1764694515.924762.json
