implementacion historia MED-PER-002

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,23 @@ writable/debugbar/debugbar_1764694501.344543.json
 writable/debugbar/debugbar_1764694505.523412.json
 writable/debugbar/debugbar_1764694511.094317.json
 writable/debugbar/debugbar_1764694515.924762.json
+writable/debugbar/debugbar_1764697637.047585.json
+writable/debugbar/debugbar_1764697637.109155.json
+writable/debugbar/debugbar_1764697661.353507.json
+writable/debugbar/debugbar_1764697661.416162.json
+writable/debugbar/debugbar_1764697685.828553.json
+writable/debugbar/debugbar_1764697685.889998.json
+writable/debugbar/debugbar_1764697756.044066.json
+writable/debugbar/debugbar_1764697756.084768.json
+writable/debugbar/debugbar_1764697758.218475.json
+writable/debugbar/debugbar_1764697758.273510.json
+writable/debugbar/debugbar_1764697759.539815.json
+writable/debugbar/debugbar_1764697763.928356.json
+writable/debugbar/debugbar_1764697971.694190.json
+writable/debugbar/debugbar_1764697978.665836.json
+writable/debugbar/debugbar_1764697978.734476.json
+writable/debugbar/debugbar_1764697980.061029.json
+writable/debugbar/debugbar_1764697980.098231.json
+writable/debugbar/debugbar_1764697983.473963.json
+writable/debugbar/debugbar_1764697983.528714.json
+writable/debugbar/debugbar_1764697985.465160.json
