--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ writable/debugbar/debugbar_1764697980.098231.json
 writable/debugbar/debugbar_1764697983.473963.json
 writable/debugbar/debugbar_1764697983.528714.json
 writable/debugbar/debugbar_1764697985.465160.json
+app/Config/Database.php
