docs: actualizar estructura de vistas en GEMINI.md y agregar .gemini a gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,5 @@ writable/debugbar/debugbar_1764697983.473963.json
 writable/debugbar/debugbar_1764697983.528714.json
 writable/debugbar/debugbar_1764697985.465160.json
 app/Config/Database.php
+
+.gemini/
